[package]
name = "yoyo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["svg"] }
egui_plot = "0.28.1"
slotmap = "1.0.7"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "tracing-log",
] }
